--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "react": "^16.13.1",
     "react-async": "^10.0.1",
     "react-dom": "^16.13.1",
+    "react-gif-player": "^0.4.2",
     "react-router-dom": "^5.2.0",
     "react-scripts": "3.4.3",
     "recompose": "^0.30.0",
