--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "react-gif-player": "^0.4.2",
     "react-router-dom": "^5.2.0",
     "react-scripts": "3.4.3",
+    "react-tinder-card": "^1.3.1",
     "recompose": "^0.30.0",
     "sass": "^1.26.11"
   },
